--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,15 @@
 [package]
 name = "EnumBitFlags"
-version = "0.1.0"
+version = "1.0.0"
 edition = "2021"
 authors = ["gavrilut.dragos@gmail.com"]
 description = "EnumBitFlags is an implementation of flags support for enums"
-license="MIT"
+license = "MIT"
+keywords = ["bitflags", "enum", "enumbitflags", "enumflags", "flags"]
+categoies = ["development-tools::procedural-macro-helpers"]
+repository = "https://github.com/gdt050579/EnumBitFlags/"
+readme = "README.md"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [lib]
 proc-macro = true
 
